[package]
name = "text-rts"
version = "0.1.0"
authors = ["Maxwell Anderson <maxwell.brayden.anderson@gmail.com>"]
edition = "2018"
keywords = ["text", "rts", "strategy", "game", "text-based"]
categories = ["games"]

[features]
default = [ "bracket-lib/opengl" ]
console = [ "bracket-lib/crossterm" ]

[dependencies]
legion = "0.2"
bracket-lib = { git = "https://github.com/thebracket/bracket-lib", optional = true, default-features = false, features = [ "threaded" ] }
