[package]
name = "text-rts"
description = "A text-based sci-fi themed real-time strategy game"
version = "0.1.0"
authors = ["Maxwell Anderson <maxwell.brayden.anderson@gmail.com>"]
edition = "2018"
keywords = ["text", "rts", "strategy", "game", "text-based"]
categories = ["games"]
license = "MIT"
homepage = "https://github.com/Maxgy/text-rts"
repository = "https://github.com/Maxgy/text-rts"

[features]
default = ["bracket-lib/opengl", "legion/default"]
web = ["bracket-lib/opengl"]
console = ["bracket-lib/crossterm", "legion/default"]

[dependencies]
legion = { version = "0.3", default-features = false }
bracket-lib = { git = "https://github.com/thebracket/bracket-lib", version = "0.8", default-features = false, features = ["threaded"] }
rand = { version = "0.7", features = ["wasm-bindgen"] }
wasm-bindgen = { version = "0.2", optional = true }

winit = "0.23"
